@@ -1,3 +1,4 @@
+Refactored thermal energy into bead state memento
 Use lazy vals instead of defs where possible for vector calculations to improve performance
 Batch notifications during bead update; profiler reports a 17% performance improvement
 Replaced "Ftotal" and "Fnet" with "Fsum"
